# diffusion

./: .gitignore  .travis.yml  README.md  diffusion.cabal  osm2gmap.cabal  stack.yaml
conf/: ecuador.dotenv  localtest.dotenv  osm2gmap.dotenv
conf/gencountrymap/: ecuador-from-latam.dotenv  ecuador-from-planet.dotenv
conf/genregionmap/: ecuador-from-planet.dotenv  localtest.dotenv
src/: GenCountryMap.hs  GenPrintableMap.hs  GenRegionMap.hs  Main.hs  OldMain.hs  Osm2Gmap.hs
src/Data/Diffusion/: Common.hs
styles/: points
styles/default/: points
