name:                osm2gmap
version:             0.1.0.0
synopsis:            Make Garmin maps from Geofabrik raw data
-- description:
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable osm2gmap
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:         base >=4.8 && <5.0
                       , http-conduit >=2.1 && <2.2
                       , conduit
                       , conduit-extra
                       , bytestring
                       , transformers
                       , optparse-applicative
                       , resourcet
                       , directory >=1.2 && <1.3
                       , time
                       , http-types
                       , data-default
                       , turtle >=1.2.3 && <1.3
                       , system-filepath
                       , text

  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010