name:                osm2gmap
version:             0.1.0.0
synopsis:            Make Garmin maps from Geofabrik raw data
-- description:
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
maintainer:          justin@stackbuilders.com
copyright:           2016 Justin Leitgeb
category:            Data
build-type:          Simple
cabal-version:       >=1.10
data-dir:            styles

executable gencountrymap
  main-is:             GenCountryMap.hs
  build-depends:         base >=4.8 && <5.0
                       , shake
                       , dotenv
                       , hashable
                       , binary
                       , deepseq

  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable osm2gmap
  main-is:             Osm2Gmap.hs
  build-depends:         base >=4.8 && <5.0
                       , shake
                       , dotenv
                       , hashable
                       , binary
                       , deepseq

  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010

  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010